# YourPhotos

./: README.md
selfPhoto/: .gitignore  docker-compose-dev.yml  windi.config.ts
selfPhoto/backend/: backend.dockerfile  worker.dockerfile
selfPhoto/backend/app/: pyproject.toml  start_worker.sh
selfPhoto/backend/app/app/: main.py  regex.py
selfPhoto/backend/app/app/api/: deps.py  http_exceptions.py
selfPhoto/backend/app/app/api/v1/: api.py
selfPhoto/backend/app/app/api/v1/endpoints/: album.py  album_users.py  asset.py  exif.py  favorite.py  login.py  media.py  thumbnail.py  users.py
selfPhoto/backend/app/app/auth_validators/: __init__.py  album.py  album_user.py  base.py
selfPhoto/backend/app/app/core/: config.py  huey_app.py  security.py
selfPhoto/backend/app/app/crud/: __init__.py  base.py  crud_album.py  crud_album_asset.py  crud_album_user.py  crud_asset.py  crud_exif.py  crud_geocode.py  crud_user.py
selfPhoto/backend/app/app/db/: base.py  init_db.py  session.py
selfPhoto/backend/app/app/models/: __init__.py  album.py  album_asset.py  album_user.py  asset.py  exif.py  geocode.py  user.py
selfPhoto/backend/app/app/schemas/: __init__.py  album.py  album_asset.py  album_user.py  album_users.py  asset.py  base.py  exif.py  geocode.py  token.py  user.py
selfPhoto/backend/app/app/tasks/: test.py
selfPhoto/backend/app/app/tasks/asset/: __init__.py  control.py  exif.py  geocode.py  thumbnail.py
selfPhoto/backend/app/scripts/: generate_api_schema.py
selfPhoto/frontend/: frontend.dockerfile
selfPhoto/frontend/app/app/: README.md  openapi.json  (+4 more)
(+57 files in other folders)
